# excel-mcp-server

./: .gitignore  .project-planning.yaml  CHANGELOG.md  README.md  TOOLS.md  manifest.json  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  publish.yml  release-packaging.yml  release-pypi-publish.yml  reusable-validate-and-test.yml
docs/: excel-mcp-fork-com-vs-file-routing.md  index.html
docs/architecture/: README.md  ci-cd-packaging-governance.md  com-first-workbook-session-design.md  com-read-class-tools-design.md  pre-fork-architecture.md  release-versioning-policy.md  target-architecture.md
docs/architecture/adr/: 0001-workbook-transport-vs-mcp-wire-transport.md  0002-com-automation-stack.md  0003-read-path-com-parity.md  0004-chart-pivot-com-parity-scope.md  0007-com-read-class-tools-routing.md  (+5 more)
docs/performance/: routing-nfr2-note.md
docs/specs/: PRD-excel-mcp-transport-routing.md
src/excel_mcp/: com_executor.py  com_support.py  path_policy.py  path_resolution.py  server.py
tests/: test_authoritative_mcp_tool_inventory.py  test_cloud_workbook_locator.py  test_com_executor.py  test_com_support.py  test_com_workbook_open_detection.py  test_com_workbook_service.py  test_file_workbook_service.py  test_mcp_contract_bridge.py  test_path_allowlist.py  test_path_equivalence.py  test_read_class_com_wiring.py  test_resolve_target.py  test_routed_dispatch_logging.py  test_routing_backend.py  test_routing_env.py  test_server_routing_integration.py  test_session_lifecycle_tools.py  test_shared_workbook_operation.py  test_workbook_open_in_excel_port.py
(+70 files in other folders)
