[project]
name = "excel-com-mcp"
version = "0.3.0"
description = "Excel MCP Server for manipulating Excel files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "twine>=6.0",
    "hatch>=1.13",
]
com = [
    "pywin32>=307",
]

[[project.authors]]
name = "haris"
email = "haris.musa@outlook.com"

[project.scripts]
excel-com-mcp = "excel_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build]
packages = ["src/excel_mcp"]
